<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgdelivery"
    tools:context=".dpolicy">

    <TextView
        android:id="@+id/dpolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/dpolicy"
        android:textColor="@color/purple_500"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dpp"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="268dp"
        android:text="@string/dpp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpolicy" />

    <CheckBox
        android:id="@+id/agree"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginTop="52dp"
        android:text="@string/agree"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpp" />


    <Button
        android:id="@+id/calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/calender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agree"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/confirmpolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmpolicy"
        app:layout_constraintBaseline_toBaselineOf="@+id/calender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toEndOf="@+id/calender"
        app:layout_constraintTop_toBottomOf="@+id/agree" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="261dp"
        android:layout_height="183dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/dpp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpolicy"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dpolicy" />

</androidx.constraintlayout.widget.ConstraintLayout>